Remove legacy bcs registry (#16425)
Describe the changes or additions included in this PR.

How did you test the new or updated feature?

---
If your changes are not user-facing and do not break anything, you can
skip the following section. Otherwise, please briefly describe what has
changed under the Release Notes section.

- [ ] protocol change
- [ ] user-visible impact
- [ ] breaking change for a client SDKs
- [ ] breaking change for FNs (FN binary must upgrade)
- [ ] breaking change for validators or node operators (must upgrade
binaries)
- [ ] breaking change for on-chain data layout
- [ ] necessitate either a data wipe or data migration

--- a/sdk/docs/pages/typescript/v1-migration.mdx
+++ b/sdk/docs/pages/typescript/v1-migration.mdx
@@ -60,3 +60,7 @@ Removed `is` and `assert` helpers
 - cleanup typescript/bcs exports
 - maybe remove intent exports from cryptography and just use bcs intent encoding/decoding directly
 - Should fromB64, toB64, fromHEX, toHEX still be exported from utils?
+- Parse typeArguments from string in input
+- rename normalizeInputs hook
+- accept `(txb) -> txb.object` as txb argument?
+- handle string and address structs when encoding raw values (see getPureSerializationType)
