--- a/sdk/docs/pages/typescript/hello-sui.mdx
+++ b/sdk/docs/pages/typescript/hello-sui.mdx
@@ -53,7 +53,7 @@ Create a new `index.js` file in the root of your project with the following code
 
 ```js
 import { getFullnodeUrl, SuiClient } from '@mysten/sui.js/client';
-import { getFaucetHost, requestSuiFromFaucetv1 } from '@mysten/sui.js/faucet';
+import { getFaucetHost, requestSuiFromFaucetV1 } from '@mysten/sui.js/faucet';
 import { MIST_PER_SUI } from '@mysten/sui.js/utils';
 
 // replace <YOUR_SUI_ADDRESS> with your actual address, which is in the form 0x123...
@@ -72,7 +72,7 @@ const suiBefore = await suiClient.getBalance({
 	owner: MY_ADDRESS,
 });
 
-await requestSuiFromFaucetv1({
+await requestSuiFromFaucetV1({
 	// use getFaucetHost to make sure you're using correct faucet address
 	// you can also just use the address (see Sui TypeScript SDK Quick Start for values)
 	host: getFaucetHost('devnet'),
@@ -98,7 +98,7 @@ Save the file, then use Node.js to run it in your Console or Terminal:
 node index.js
 ```
 
-The code imports the `requestSuiFromFaucetv1` function from the SDK and calls it to mint SUI for the
+The code imports the `requestSuiFromFaucetV1` function from the SDK and calls it to mint SUI for the
 provided address. The code also imports `SuiClient` to create a new client on the Sui network that
 it uses to query the address and output the amount of SUI the address owns before and after using
 the faucet. You can check the total SUI for your address using the Sui Wallet or Sui Client CLI.
