--- a/docs/content/guides/developer/sui-101/access-time.mdx
+++ b/docs/content/guides/developer/sui-101/access-time.mdx
@@ -20,18 +20,15 @@ module sui::clock {
 The example below demonstrates an entry function that emits an event containing a timestamp from the `Clock`:
 
 ```move
-module example::clock {
-    use sui::clock::{Self, Clock};
-    use sui::event;
+module basics::clock {
+    use sui::{clock::Clock, event};
 
-    struct TimeEvent has copy, drop, store {
-        timestamp_ms: u64
+    public struct TimeEvent has copy, drop, store {
+        timestamp_ms: u64,
     }
 
     entry fun access(clock: &Clock) {
-        event::emit(TimeEvent {
-            timestamp_ms: clock::timestamp_ms(clock),
-        });
+        event::emit(TimeEvent { timestamp_ms: clock.timestamp_ms() });
     }
 }
 ```
@@ -83,13 +80,13 @@ module example::clock_tests {
         let ctx = tx_context::dummy();
         let clock = clock::create_for_testing(&mut ctx);
 
-        clock::increment_for_testing(&mut clock, 42);
-        assert!(clock::timestamp_ms(&clock) == 42, 1);
+        clock.increment_for_testing(42);
+        assert!(clock.timestamp_ms() == 42, 1);
 
-        clock::set_for_testing(&mut clock, 50);
-        assert!(clock::timestamp_ms(&clock) == 50, 1);
+        clock.set_for_testing(50);
+        assert!(clock.timestamp_ms() == 50, 1);
 
-        clock::destroy_for_testing(clock);
+        clock.destroy_for_testing();
     }
 }
 ```
