--- a/docs/content/guides/developer/app-examples/reviews-rating.mdx
+++ b/docs/content/guides/developer/app-examples/reviews-rating.mdx
@@ -9,7 +9,7 @@ Unlike traditional review rating platforms, that often do not disclose the algor
 
 There are four actors in the typical workflow of the Reviews Rating example.  
 
-- Service: Review requestor.
+- Service: Review requester.
 - Dashboard: Review hub.
 - Reviewer: Review creator.
 - Moderator: Review list editor.
