--- a/docs/content/guides/developer/advanced/randomness-onchain.mdx
+++ b/docs/content/guides/developer/advanced/randomness-onchain.mdx
@@ -12,7 +12,13 @@ entry fun roll_dice(r: &Random, ctx: &mut TxContext): Dice {
 }
 ```
 
-See <a href="/references/framework/sui-framework/random" data-noBrokenLinkCheck='true'>random.move</a> for the Move APIs for accessing randomness on Sui.
+`Random` has a reserved address `0x8`. See <a href="/references/framework/sui-framework/random" data-noBrokenLinkCheck='true'>random.move</a> for the Move APIs for accessing randomness on Sui.
+
+:::note
+
+Although `Random` is a shared object, it is inaccessible for mutable operations, and any transaction attempting to modify it fails.
+
+:::
 
 Having access to random numbers is only one part of designing secure applications, you should also pay careful attention to how you use that randomness. To securely access randomness:
 
@@ -131,6 +137,19 @@ Other limited resources per transaction are:
 
 - The number of new objects.
 - The number of objects that can be used (including dynamic fields).
+
+## Accessing `Random` from TypeScript
+
+If you want to call `roll_dice(r: &Random, ctx: &mut TxContext)` in module `example`, use the following code snippet:
+```typescript
+const txb = new TransactionBlock();
+txb.moveCall({
+  target: "${PACKAGE_ID}::example::roll_dice",
+  arguments: [txb.object('0x8')]
+});
+...
+```
+
 
 ## Related Links
 
