--- a/docs/content/guides/developer/coin/create-coin/in-game-token.mdx
+++ b/docs/content/guides/developer/coin/create-coin/in-game-token.mdx
@@ -39,7 +39,7 @@ Toggle complete module code
 
 </details>
 
-## Complete code 
+### Complete code 
 
 Toggle display of the complete source for this example, including comments, or use the link in the [Related links](#related-links) section to view the project source on GitHub.
 
@@ -54,6 +54,7 @@ Toggle complete source code
 
 ## Related links
 
+- [Closed Loop Token standard](../../../../standards/closed-loop-token.mdx): Details for the standard used to create tokens on Sui.
 - [Source code](https://github.com/MystenLabs/sui/blob/main/examples/move/token/sources/gems.move): The source code in GitHub for this example.
 - [Loyalty Tokens](./loyalty.mdx): Example of how to create tokens that are valid only for a specific service, useful in loyalty reward programs.
 - [Regulated Coin and Deny List](./regulated.mdx): Example of how to create regulated coins on the Sui network.
