--- a/docs/content/concepts/sui-architecture.mdx
+++ b/docs/content/concepts/sui-architecture.mdx
@@ -18,8 +18,8 @@ Go to [Life of a Transaction](./sui-architecture/transaction-lifecycle.mdx).
 
 ## Consensus
 
-Zooming in, every transaction is sequenced by consensus, where validators agree to the same order of execution of the transactions, even if a minority of them are down or want to cause disruptions!
-Sui currently uses Narwhal and Bullshark for consensus. They will soon be upgraded to Mysticeti.
+Every transaction on Sui is sequenced by consensus, where validators agree to the same order of execution of the transactions, even if a minority of them are down or are malicious actors that want to cause disruptions.
+Sui currently uses Narwhal and Bullshark for consensus, but will transition to [Mysticeti](https://arxiv.org/pdf/2310.14821) soon.
 
 Go to [Consensus](./sui-architecture/consensus.mdx).
 
